# cppLox

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  jit_notes.md  main.cpp  todo
srcs/lox/: CMakeLists.txt  binary_dispatcher.h  err_code.h  error.cpp  error.h  global_setting.cc  global_setting.h  lox.cc  lox.cpp  lox.h  lox_error.cc  lox_error.h  lox_object.cpp  lox_object.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.h
srcs/lox/ast/: CMakeLists.txt  _ast_node.h  ast.cc  ast.h  ast_decl.h.inc  ast_node.cc  ast_node.h  ast_node_def.yaml  ast_node_visitor.h  ast_nodes_decl.h.inc  ast_printer.cpp  ast_printer.h  environment.cpp  environment.h  eval_visitor.cpp  eval_visitor.h  expr.cpp  expr.h  expr_decl.h.inc  expr_def.tpl  expr_stmt_def.tpl  nodes_code_writer.py  stmt.cpp  stmt.h  stmt_decl.h.inc  update_local_cache.sh
srcs/lox/ast/ast_printer/: CMakeLists.txt  ast_printer.cpp  ast_printer.h
srcs/lox/ast/gen_tool/: nodes_code_writer.py  update_local_cache.sh
srcs/lox/ast_nodes/: CMakeLists.txt  expr.h  nodes_code_writer.py
srcs/lox/backend/: CMakeLists.txt  backend.h  bakcend.cc
srcs/lox/backend/jit/: CMakeLists.txt  mlir_jit.cpp  mlir_jit.h
srcs/lox/backend/jit/translation/: CMakeLists.txt  ast_to_mlir.cc  ast_to_mlir.h
srcs/lox/backend/llvm/: CMakeLists.txt  llvm_jit.cpp  llvm_jit.h
srcs/lox/backend/llvm/builtins/: CMakeLists.txt  builtin.cc  builtin.h
srcs/lox/backend/llvm/passes/: CMakeLists.txt  add_no_alias.cc  add_no_alias.h  add_no_alias_plugin.cc  op_counter.cc  op_counter.h  op_counter_plugin.cc
srcs/lox/backend/llvm/translation/: CMakeLists.txt  ast_to_llvm.cpp  ast_to_llvm.h
srcs/lox/backend/mlir/: CMakeLists.txt  mlir_jit.cpp  mlir_jit.h
srcs/lox/backend/mlir/translation/: CMakeLists.txt  ast_to_mlir.cc  ast_to_mlir.h
srcs/lox/backend/tree_walker/: CMakeLists.txt  error.cc  error.h  parser.cc  parser.h  tree_walker.cc  tree_walker.h
srcs/lox/backend/tree_walker/ast/: CMakeLists.txt  ast.cc  ast.h  ast_node.h  ast_node_def.tpl  expr.h  stmt.h  update_local_cache.sh
srcs/lox/backend/tree_walker/builtins/: CMakeLists.txt  builtin_fn.cc  builtin_fn.h
srcs/lox/backend/tree_walker/bultins/: CMakeLists.txt  builtin_fn.cc
srcs/lox/backend/tree_walker/evaluator/: CMakeLists.txt  callable_object.cc  callable_object.h  class_instance.cc  class_instance.h  environment.cc  environment.cpp  environment.h  evaluator.cc  evaluator.cpp  evaluator.h  lox_class.cc  lox_class.h  lox_function.cc  lox_function.h  runtime_error.h  runtime_object.cc  runtime_object.h
srcs/lox/backend/tree_walker/lox_object/: binary_dispatcher.h  lox_object.cpp  lox_object.h
srcs/lox/backend/tree_walker/passes/: CMakeLists.txt  pass_manager.cc  pass_manager.h  pass_runner.cc  pass_runner.h
srcs/lox/backend/virtual_machine/: CMakeLists.txt  errors.cc  errors.h  virtual_machine.cc  virtual_machine.h
srcs/lox/backend/virtual_machine/builtins/: CMakeLists.txt  builtin_fn.cc  builtin_fn.h
srcs/lox/backend/virtual_machine/bytecode/: CMakeLists.txt  chunk.cc  chunk.h  debug.cc
srcs/lox/backend/virtual_machine/common/: CMakeLists.txt  buffer.cc  buffer.h  builtin_fn.cc  builtin_fn.h  clox_object.cc  clox_object.h  clox_value.cc  clox_value.h  common.h  err_code.h  hash_map.h  link_list.h  memory.cc  memory.h  vector.cc  vector.h
srcs/lox/backend/virtual_machine/core/: CMakeLists.txt  chunk.cc  chunk.h  compiler.cc  compiler.h  debug.cc  debug.h  function_unit.cc  function_unit.h  opcode.h  vm.cc  vm.h
srcs/lox/backend/virtual_machine/debug/: CMakeLists.txt  debug.cc  debug.h
srcs/lox/backend/virtual_machine/object/: CMakeLists.txt  object.cc  object.h  value.cc  value.h
srcs/lox/common/: CMakeLists.txt  finally.h  global_setting.cc  global_setting.h  input_file.cc  input_file.h  location.cc  location.h  lox_error.cc  lox_error.h  string_ref.h
srcs/lox/evaluator/: CMakeLists.txt  eval_visitor.cpp  eval_visitor.h  lox_object.cpp  lox_object.h
srcs/lox/frontend/: CMakeLists.txt  parser.cc  parser.h  scanner.cc  scanner.cpp  scanner.h  token.cc  token.cpp  token.h
srcs/lox/frontend/ast/: CMakeLists.txt  ast.cc  ast.h  ast_decl.h.inc  ast_node.cc  ast_node.h  expr.h  nodes_code_writer.py  stmt.h
srcs/lox/frontend/passes/: pass.h  pass_manager.h  pass_runner.h
srcs/lox/global_setting/: CMakeLists.txt  global_setting.cpp  global_setting.h
srcs/lox/lox_object/: CMakeLists.txt  binary_dispatcher.h  lox_object.cpp  lox_object.h  lox_object_state.h
srcs/lox/object/: CMakeLists.txt  gc.cc  gc.h  object.cc  object.h  value.cc  value.h
srcs/lox/passes/: CMakeLists.txt  pass.h  pass_manager.cc  pass_manager.h  pass_runner.cc  pass_runner.h
srcs/lox/passes/ast_printer/: CMakeLists.txt  ast_printer.cc
srcs/lox/passes/env_resolve_pass/: CMakeLists.txt  env_reslove_pass.cc  env_reslove_pass.h  resovler.cc  resovler.h
srcs/lox/passes/semantic_check/: CMakeLists.txt  semantic_check.cc  semantic_check.h
srcs/lox/token/: CMakeLists.txt  token.cc  token.h  token_type.h
srcs/lox/version/: CMakeLists.txt  version.cc.in  version.h
srcs/lox/visitors/: CMakeLists.txt
srcs/lox/visitors/ast_printer/: ast_printer.cpp  ast_printer.h
srcs/lox/visitors/evaluator/: CMakeLists.txt  callable_object.cc  callable_object.h  class_instance.cc  class_instance.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  lox_class.cc  lox_class.h  lox_function.cc  lox_function.h
srcs/lox/visitors/passes/: CMakeLists.txt  pass_runner.cc  pass_runner.h
srcs/lox/visitors/resolver_pass/: CMakeLists.txt  resolve_map.cc  resovler.cc  resovler.h
srcs/mlir/: CMakeLists.txt  README.md  lit.cfg  lit.site.cfg.in
srcs/mlir/include/mlir/: InitAllLoxDialects.h  InitAllLoxPasses.h
srcs/mlir/lib/: CMakeLists.txt
srcs/mlir/lib/Conversion/: CMakeLists.txt
srcs/mlir/lib/Dialect/: CMakeLists.txt
srcs/mlir/test/: dialect.mlir  lit.local.cfg
srcs/mlir/test/IR/: echo.mlir
srcs/mlir/tools/: CMakeLists.txt
srcs/mlir/tools/mlir-opt/: CMakeLists.txt  mlir-opt.cc
srcs/version/: CMakeLists.txt  version.cc.in  version.h
(+124 files in other folders)
